# xeus-clang-repl

./: .dockerignore  .gitignore  .readthedocs.yaml  CMakeLists.txt  Dockerfile  README.md  bash-docker.sh  build-and-run-docker.sh  environment-dev.yml  environment.yml  index.ipynb  postBuild  remove-docker.sh  run-docker.sh  xeus-clang-replConfig.cmake.in
.azure-pipelines/: azure-pipelines-linux.yml  unix-build.yml
.github/workflows/: ci.yml
docs/: CMakeLists.txt  DevelopersDocumentation.rst  FAQ.rst  InstallationAndUsage.rst  UsingXeus-Clang-REPL.rst  conf.py  doxygen-mainpage.dox  doxygen.cfg.in  doxygen.footer  doxygen.header  environment.yml  index.rst  reference.rst  tutorials.rst
include/xcpp/: xdisplay.hpp  xmime.hpp
include/xeus-clang-repl/: xbuffer.hpp  xdemangle.hpp  xeus_clang-repl_config.hpp  xholder_clang-repl.hpp  xinput.hpp  xinspect.hpp  xinterpreter.hpp  xmagics.hpp  xmanager.hpp  xmime_internal.hpp  xoptions.hpp  xparser.hpp  xpreamble.hpp  xsystem.hpp
include/xmagics/: os.hpp  pythonexec.hpp
notebooks/: ProjectMockup.ipynb  Python-Cpp-Integration-Demo.ipynb  clad-demo.ipynb  index.ipynb  openmp-demo.ipynb  smallptCuda.ipynb
notebooks/eigen_demo/: cppyy_caas_tests.ipynb  eigen_demo.ipynb
notebooks/gaussian_CUDA_demo/: gaussian_test.ipynb
notebooks/image_CUDA_demo/: threshold_test.ipynb
notebooks/kalman_CUDA_demo/: kalman.h++  kalman.hpp  run_kf.ipynb  run_kf_CUDA.ipynb  run_kf_plot.ipynb
notebooks/kalman_CUDA_demo/data/: measurements.yml
notebooks/omp/: hello_world.ipynb  linked_list.ipynb  mandel.ipynb  pi_integral.ipynb
patches/llvm/: README.md  clang14-D127284-backport.patch  clang15-D127284-backport-.patch  clang15-D127284.patch  clang16-1-Value.patch  clang16-D141215-Value.patch  clang17-1-CUDA-CodeGenFix.patch  clang17-2-fix-toplevel-code.patch
share/jupyter/kernels/clad-xcpp17/: kernel.json.in
share/jupyter/kernels/cuda-xcpp17/: kernel.json.in
share/jupyter/kernels/omp-xcpp17/: kernel.json.in
share/jupyter/kernels/xcpp11/: kernel.json.in
share/jupyter/kernels/xcpp14/: kernel.json.in
share/jupyter/kernels/xcpp17/: kernel.json.in
src/: main.cpp  xholder_clang-repl.cpp  xholder_cling.cpp  xinput.cpp  xinterpreter.cpp  xoptions.cpp  xparser.cpp
src/xmagics/: executable.cpp  executable.hpp  execution.cpp  execution.hpp  os.cpp  os.hpp  pythonexec.cpp  pythonexec.hpp
test/: CMakeLists.txt  main.cpp  test_stream.cpp  test_xcpp_kernel.py
